# grafana-minikube

./: .gitignore  README.md  grafana-deployment.yaml  prometheus-config.yaml  request.py
applications/axum-example/: Cargo.toml
applications/axum-example/src/: main.rs
kubernetes/: loki-deployment.yaml  prometheus-config.yaml  prometheus-deployment.yaml
