[package]
name = "axum-example"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
axum = "0.8.1"
axum-prometheus = "0.8.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-loki = "0.2"
tokio = { version = "1.44.1", features = ["full"] }
tower-http = {version = "0.6.2", features = ["trace"]}
